@@ -18,6 +18,8 @@
  */
 package org.grails.gradle.plugin.core
 
+import java.util.zip.ZipFile
+
 import grails.util.BuildSettings
 import grails.util.Environment
 import grails.util.GrailsNameUtils
@@ -31,6 +33,7 @@ import org.apache.tools.ant.filters.EscapeUnicode
 import org.apache.tools.ant.filters.ReplaceTokens
 import org.gradle.api.DefaultTask
 import org.gradle.api.GradleException
+import org.gradle.api.JavaVersion
 import org.gradle.api.NamedDomainObjectProvider
 import org.gradle.api.Plugin
 import org.gradle.api.Project
@@ -44,6 +47,8 @@ import org.gradle.api.file.DuplicatesStrategy
 import org.gradle.api.file.FileCollection
 import org.gradle.api.file.RegularFile
 import org.gradle.api.plugins.ExtraPropertiesExtension
+import org.gradle.api.plugins.GroovyPlugin
+import org.gradle.api.plugins.JavaPluginExtension
 import org.gradle.api.provider.Provider
 import org.gradle.api.tasks.AbstractCopyTask
 import org.gradle.api.tasks.JavaExec
@@ -53,6 +58,7 @@ import org.gradle.api.tasks.TaskContainer
 import org.gradle.api.tasks.TaskProvider
 import org.gradle.api.tasks.compile.GroovyCompile
 import org.gradle.api.tasks.testing.Test
+import org.gradle.jvm.toolchain.JavaToolchainService
 import org.gradle.language.jvm.tasks.ProcessResources
 import org.gradle.process.JavaForkOptions
 import org.gradle.tooling.provider.model.ToolingModelBuilderRegistry
@@ -71,6 +77,7 @@ import org.springframework.boot.gradle.plugin.ResolveMainClassName
 import org.springframework.boot.gradle.plugin.SpringBootPlugin
 import org.springframework.boot.gradle.tasks.bundling.BootArchive
 import org.springframework.boot.gradle.tasks.run.BootRun
+import org.springframework.boot.loader.tools.LoaderImplementation
 
 import javax.inject.Inject
 
@@ -97,7 +104,7 @@ class GrailsGradlePlugin implements Plugin<Project> {
 
     void apply(Project project) {
 
-        project.pluginManager.apply('groovy')
+        project.pluginManager.apply(GroovyPlugin)
 
         // validate that only an app or a plugin is registered, and never both
         OnlyOneGrailsPlugin marker = (OnlyOneGrailsPlugin) project.getExtensions().findByName(OnlyOneGrailsPlugin.name)
@@ -136,6 +143,8 @@ class GrailsGradlePlugin implements Plugin<Project> {
         configureConsoleTask(project)
 
         configureForkSettings(project, grailsVersion)
+
+        configureJavaCompatibilityArgs(project)
 
         configureGrailsSourceDirs(project)
 
@@ -182,6 +191,8 @@ class GrailsGradlePlugin implements Plugin<Project> {
     private void configureGroovyCompiler(Project project) {
         Provider<RegularFile> groovyCompilerConfigFile = project.layout.buildDirectory.file('grailsGroovyCompilerConfig.groovy')
 
+        GrailsExtension grailsExtension = project.extensions.findByType(GrailsExtension)
+
         project.tasks.withType(GroovyCompile).configureEach { GroovyCompile c ->
             c.outputs.file(groovyCompilerConfigFile)
 
@@ -214,6 +225,18 @@ class GrailsGradlePlugin implements Plugin<Project> {
                 c.groovyOptions.configurationScript = combinedFile
             }
         }
+
+        // Configure indy and log status after evaluation so user's grails { } block has been applied
+        project.afterEvaluate {
+            boolean indyEnabled = grailsExtension?.indy?.getOrElse(false) ?: false
+            project.tasks.withType(GroovyCompile).configureEach { GroovyCompile c ->
+                c.groovyOptions.optimizationOptions.indy = indyEnabled
+            }
+            if (!indyEnabled) {
+                project.logger.info('Grails: Groovy invokedynamic (indy) is disabled to improve performance (see issue #15293).')
+                project.logger.info('        To enable invokedynamic: grails { indy = true } in build.gradle')
+            }
+        }
     }
 
     protected Closure<String> getGroovyCompilerScript(GroovyCompile compile, Project project) {
@@ -232,13 +255,13 @@ class GrailsGradlePlugin implements Plugin<Project> {
             // Always add jakarta.validation.constraints
             starImports.add('jakarta.validation.constraints')
 
-            // Check for grails-datamapping-core (grails.gorm.annotation.*)
-            if (hasDependency(project, 'compileClasspath', 'org.apache.grails.data', 'grails-datamapping-core')) {
+            // Check for grails.gorm.annotation.* classes on classpath
+            if (isClassOnClasspath(compile.classpath, 'grails.gorm.annotation.CreatedDate')) {
                 starImports.add('grails.gorm.annotation')
             }
 
-            // Check for grails-scaffolding (grails.plugin.scaffolding.annotation.*)
-            if (hasDependency(project, 'compileClasspath', 'org.apache.grails', 'grails-scaffolding')) {
+            // Check for grails.plugin.scaffolding.annotation.* classes on classpath
+            if (isClassOnClasspath(compile.classpath, 'grails.plugin.scaffolding.annotation.Scaffold')) {
                 starImports.add('grails.plugin.scaffolding.annotation')
             }
         }
@@ -261,28 +284,29 @@ ${importStatements}
     }
 
     /**
-     * Check if a dependency is present in the configuration hierarchy.
-     * This checks all dependencies including those from parent configurations via extendsFrom.
+     * Check if a class exists on the given classpath.
+     * This detects classes from any source: direct dependencies, transitive dependencies, or local jars.
      *
-     * @param project The Gradle project
-     * @param configurationName The configuration to check (e.g., 'compileClasspath')
-     * @param group The dependency group (e.g., 'org.apache.grails.data')
-     * @param name The dependency name (e.g., 'grails-datamapping-core')
-     * @return true if the dependency is present in the configuration hierarchy
+     * @param classpath The FileCollection representing the classpath to search
+     * @param className The fully qualified class name to look for (e.g., 'grails.gorm.annotation.CreatedDate')
+     * @return true if the class is found on the classpath
      */
-    protected boolean hasDependency(Project project, String configurationName, String group, String name) {
-        try {
-            def configuration = project.configurations.findByName(configurationName)
-            if (configuration == null) {
-                return false
+    private static boolean isClassOnClasspath(FileCollection classpath, String className) {
+        def classEntry = className.replace('.', '/') + '.class'
+        classpath.files.any { f ->
+            try {
+                if (f.file && f.name.endsWith('.jar')) {
+                    new ZipFile(f).withCloseable { zip ->
+                        zip.getEntry(classEntry) != null
+                    }
+                } else if (f.directory) {
+                    new File(f, classEntry).exists()
+                } else {
+                    false
+                }
+            } catch (Exception ignored) {
+                false
             }
-
-            return configuration.allDependencies.any { d ->
-                d.group == group && d.name == name
-            }
-        } catch (Exception e) {
-            project.logger.debug("Failed to check for dependency ${group}:${name} in ${configurationName}: ${e.message}")
-            return false
         }
     }
 
@@ -435,10 +459,11 @@ ${importStatements}
                 }
             }
 
-            project.logger.info('Adding Micronaut annotationProcessor dependencies to project {}', project.name)
-            project.getDependencies().add('annotationProcessor', project.dependencies.platform("io.micronaut.platform:micronaut-platform:$micronautPlatformVersion"))
-            project.getDependencies().add('annotationProcessor', 'io.micronaut:micronaut-inject-java')
-            project.getDependencies().add('annotationProcessor', 'jakarta.annotation:jakarta.annotation-api')
+            project.logger.info('Configuring CLASSIC boot loader for Micronaut compatibility in {}', project.name)
+            project.tasks.withType(BootArchive).configureEach {
+                it.loaderImplementation.convention(LoaderImplementation.CLASSIC)
+            }
+
         }
     }
 
@@ -615,6 +640,107 @@ ${importStatements}
         String grailsEnvSystemProperty = System.getProperty(Environment.KEY)
         tasks.withType(Test).configureEach(systemPropertyConfigurer.curry(grailsEnvSystemProperty ?: Environment.TEST.getName()))
         tasks.withType(JavaExec).configureEach(systemPropertyConfigurer.curry(grailsEnvSystemProperty ?: Environment.DEVELOPMENT.getName()))
+
+        configureToolchainForForkTasks(project)
+    }
+
+    /**
+     * Configures {@link JavaExec} tasks to inherit the project's Java toolchain.
+     *
+     * <p>Gradle's {@code JavaPlugin} already sets toolchain conventions on
+     * {@code JavaCompile}, {@code Javadoc}, and {@code Test} tasks, but does
+     * <strong>not</strong> set them on {@code JavaExec} tasks. This means forked
+     * JVM processes (dbm-* migration tasks, console, shell, and application
+     * context commands) use the JDK running Gradle instead of the project's
+     * configured toolchain. When the project targets a different JDK version
+     * than the one running Gradle, this causes {@code UnsupportedClassVersionError}
+     * or silent runtime failures.</p>
+     *
+     * <p>This method only acts when the user has explicitly configured a toolchain
+     * via {@code java.toolchain.languageVersion}. When no toolchain is configured,
+     * behavior is unchanged - tasks use the JDK running Gradle as before.</p>
+     *
+     * <p>Uses {@code convention()} so that individual tasks can still override
+     * the launcher via {@code javaLauncher.set(...)} if needed.</p>
+     *
+     * @param project the Gradle project
+     * @since 7.0.8
+     */
+    protected void configureToolchainForForkTasks(Project project) {
+        project.plugins.withId('java') {
+            project.tasks.withType(JavaExec).configureEach { JavaExec task ->
+                def javaExtension = project.extensions.findByType(JavaPluginExtension)
+                if (javaExtension?.toolchain?.languageVersion?.isPresent()) {
+                    def toolchainService = project.extensions.getByType(JavaToolchainService)
+                    def launcher = toolchainService.launcherFor(javaExtension.toolchain)
+                    task.javaLauncher.convention(launcher)
+                }
+            }
+        }
+    }
+
+    /**
+     * Configures JVM arguments required for compatibility with Java 23+.
+     *
+     * <p>Java 24 introduced restrictions on native access ({@code JEP 472}) that cause
+     * warnings from libraries such as hawtjni (used by JLine) and Netty that call
+     * {@code System.loadLibrary} or declare native methods. The
+     * {@code --enable-native-access=ALL-UNNAMED} flag suppresses these warnings and
+     * will become mandatory in a future JDK release when the default changes to deny.</p>
+     *
+     * <p>Java 23 began terminal deprecation of {@code sun.misc.Unsafe} memory-access
+     * methods ({@code JEP 471/498}). Netty 4.1.x uses {@code Unsafe.allocateMemory}
+     * for off-heap buffers. The {@code --sun-misc-unsafe-memory-access=allow} flag
+     * suppresses the resulting warnings until Netty migrates to {@code MemorySegment}
+     * APIs (Netty 4.2+).</p>
+     *
+     * <p>Both flags are only added when the target JVM version (from the configured
+     * toolchain, or the JVM running Gradle if no toolchain is set) is high enough to
+     * recognize them, avoiding {@code Unrecognized option} errors on older JDKs.</p>
+     *
+     * @param project the Gradle project
+     * @see <a href="https://github.com/apache/grails-core/issues/15216">#15216 - Java 25 native access warnings</a>
+     * @see <a href="https://github.com/apache/grails-core/issues/15343">#15343 - sun.misc.Unsafe deprecation warnings</a>
+     * @since 7.0.8
+     */
+    protected void configureJavaCompatibilityArgs(Project project) {
+        project.plugins.withId('java') {
+            project.tasks.withType(Test).configureEach { Test task ->
+                applyCompatArgs(project, task, task.name)
+            }
+            project.tasks.withType(JavaExec).configureEach { JavaExec task ->
+                applyCompatArgs(project, task, task.name)
+            }
+        }
+    }
+
+    private void applyCompatArgs(Project project, JavaForkOptions task, String taskName) {
+        int targetVersion = resolveTargetJavaVersion(project)
+
+        if (targetVersion >= 24) {
+            task.jvmArgs('--enable-native-access=ALL-UNNAMED')
+            project.logger.info("Grails: adding --enable-native-access=ALL-UNNAMED to ${taskName} for Java ${targetVersion} compatibility")
+        }
+
+        if (targetVersion >= 23) {
+            task.jvmArgs('--sun-misc-unsafe-memory-access=allow')
+            project.logger.info("Grails: adding --sun-misc-unsafe-memory-access=allow to ${taskName} for Java ${targetVersion} compatibility")
+        }
+    }
+
+    /**
+     * Resolves the Java version that forked tasks will use. Checks the project's
+     * toolchain configuration first, falling back to the JVM running Gradle.
+     *
+     * @param project the Gradle project
+     * @return the major Java version number (e.g. 17, 21, 24, 25)
+     */
+    private int resolveTargetJavaVersion(Project project) {
+        JavaPluginExtension javaExtension = project.extensions.findByType(JavaPluginExtension)
+        if (javaExtension?.toolchain?.languageVersion?.isPresent()) {
+            return javaExtension.toolchain.languageVersion.get().asInt()
+        }
+        return JavaVersion.current().majorVersion.toInteger()
     }
 
     protected void configureConsoleTask(Project project) {
